--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
 
   <section>
-    <p>👋 Welcome to <strong>DopsMind</strong> — where automation, cloud, and innovation meet.</p>
+    <p>👋 Welcome to <strong>DopsMind</strong>(Dee-Ops-Mind) — where automation, cloud, and innovation meet.</p>
     <p>I help businesses streamline DevOps pipelines, optimize Salesforce deployments, and build smart AI-driven workflows.</p>
 
     <h3>🚀 What I Do</h3>
